# 2d-game-engine

./: CMakeLists.txt  LICENSE.txt  README.md  engine.cfg  resource.rc
files/fonts/: LICENSE.txt
files/img/: LICENSE.txt
files/img/chars/: LICENSE.txt
src/: audioplayer.cpp  audioplayer.h  configfile.cpp  configfile.h  constants.h  eventhandler.cpp  eventhandler.h  eventqueue.cpp  eventqueue.h  file.cpp  file.h  filenotfoundexception.cpp  filenotfoundexception.h  framelimiter.cpp  framelimiter.h  globals.h  main.cpp  screen.cpp  screen.h  serializable.h  surfacecache.cpp  surfacecache.h  tclbind.cpp  tclbind.h
src/events/: activateevent.cpp  activateevent.h  controllerevent.cpp  controllerevent.h  controllerpressevent.cpp  controllerpressevent.h  controllerreleaseevent.cpp  controllerreleaseevent.h  event.cpp  event.h  pointerevent.cpp  pointerevent.h  pointermoveevent.cpp  pointermoveevent.h  pointerpressevent.cpp  pointerpressevent.h  pointerreleaseevent.cpp  pointerreleaseevent.h
src/gfx/: controllablesprite.cpp  controllablesprite.h  draggablesprite.cpp  draggablesprite.h  gfxobject.cpp  gfxobject.h  layer.cpp  layer.h  map.cpp  map.h  mousecursor.cpp  mousecursor.h  player.cpp  player.h  splash.cpp  splash.h  sprite.cpp  sprite.h
tcl/: game.tcl
tcl/lib/: char.tcl  textbox.tcl
